#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([login-email], [0.0.0], [Tommy.Reynolds@MegaCoder.com])

AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([
        Makefile
	src/Makefile
	src/etc/Makefile
        src/etc/profile.d/Makefile
	login-email.spec
])
AC_OUTPUT
