#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([login-email], [1.0.2], [oldest.software.guy@gmail.com])

AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([login-email.sh])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([
        Makefile
	login-email.spec
])
AC_OUTPUT
